Update Company page.

--- a/src/data/Portfolio.yml
+++ b/src/data/Portfolio.yml
@@ -543,7 +543,7 @@ items:
       **Technologies**
       
       
-      HTML, CSS, JavaScript, jQuery, PHP, Kohana/CodeIgniter,
+      HdTML, CSS, JavaScript, jQuery, PHP, Kohana/CodeIgniter,
       Kohana ORM, SOAP, REST, XML,MySQL, Sphinx OSSS, Memcached, GD,
       ImageMagick, Photoshop, Illustrator, Git
     endDate: 2012-10-01T12:00:00.000Z
