Update Widgets “hero”

--- a/src/data/Hero.yml
+++ b/src/data/Hero.yml
@@ -9,7 +9,7 @@ items:
     image: /images/heroes/blue-collar-home-hero-cool.jpg
     link: /company
     linkText: Start Your Adventure
-    subtitle: We’re about software.
+    subtitle: 'Can''t be too greedy, gotta love what you do.'
     title: We’re about software.
   - description: >-
       Building beautiful, usable, fast and scalable applications is our thing.
